@@ -32,9 +32,8 @@
 //Dushan
 //FIX ALL THIS
 
-#include <stdlib.h>
-#include <stdio.h>
-#include <stdarg.h>
+#include <random>
+#include <iostream>
 #include <setjmp.h>
 #include <iostream>
 #include <mutex>
